--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h3>maruf ahmed</h3>
                 </div>
                 <div class="manus">
-                    <img src="images/players/player-6.png" alt="">
+                    <img src="images/players/player-6.png" alt="a">
                     <h3>kailla</h3>
                 <hr>
                 </div>
@@ -61,7 +61,7 @@
             <hr>
             
             <div class="top-blogs">
-                <h2>Top Blogs</h2>
+                <h2>Top Blogs!!!</h2>
                 <div class="blog">
                     <article>
                         <div class="thumbnail">
